guava as memory cache — it is more suitable than mapdb instance cache